# mkey

./: .gitignore  LICENSE-MIT  README.md  TODO.md  fp-lib-table  mkey.kicad_pcb  mkey.kicad_pro  mkey.kicad_sch
3d/: case.scad  plate.step
3d/case/: README.md  build_stl.sh  case.json  case.scad  merge_coplanar.py  mkey_overlay.stl  mkey_tray.stl  test_configs.sh
3d/case/manufacture/: MANUFACTURE_OVERLAY.md  MANUFACTURE_OVERLAY.txt  MANUFACTURE_TRAY.md  MANUFACTURE_TRAY.txt
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: display.rs  keyboard.rs  keymap.rs  log.rs  logger.rs  main.rs  panic.rs
hardware/board/: TODO.md  fp-lib-table  mkey.kicad_pcb  mkey.kicad_pro  mkey.kicad_sch
hardware/board/lib/footprints/: CONN-SMD_24P-P0.40__X0400FVS-24-LPSN.PcbLib
hardware/board/lib/footprints/CONN-SMD_24P-P0.40_X0400FVS-24-LPSN-LINEAR.pretty/: CONN-SMD_24P-P0.40_X0400FVS-24-LPSN-LINEAR.kicad_mod
hardware/board/lib/footprints/GRAPHICS.pretty/: mkey_large_cu.kicad_mod
hardware/board/lib/symbols/: SKEDD-490107670612-CONN6_490107670612_WRE.kicad_sym
hardware/board/production/mkey_2024-01-12_00-23-46/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/lib/footprints/GRAPHICS.pretty/: mkey_large.kicad_mod  qr.kicad_mod
hardware/plate/: TODO.md  mkey-plate.kicad_pcb  mkey-plate.kicad_pro  plate.kicad_pcb  plate.kicad_pro
hardware/plate-copper-logo/: mkey-plate.kicad_pcb
hardware/plate-copper-logo/production/mkey-plate_2024-01-13_13-37-13/: designators.csv
lib/footprints/24P_LCD_CONN.pretty/: CONN-SMD_24P-P0.40_X0400FVS-24-LPSN-LINEAR.kicad_mod
lib/footprints/CONN-SMD_24P-P0.40_X0400FVS-24-LPSN-LINEAR.pretty/: CONN-SMD_24P-P0.40_X0400FVS-24-LPSN-LINEAR.kicad_mod
lib/footprints/GRAPHICS.pretty/: mkey.kicad_mod
lib/footprints/SKEDD-490107670612-CONN6_490107670612_WRE.pretty/: CONN6_490107670612_WRE.kicad_mod
scripts/: README.md  verify_measurements.py
