[package]
name = "firmware"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "log-04", "unstable"] }
esp-rtos  = { version = "0.2",  features = ["esp32s3", "embassy"] }
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.16", default-features = false, features = ["esp32s3", "log-04", "jtag-serial"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

log = { version = "0.4" }
static_cell = { version = "1", features = ["nightly"] }
embedded-graphics-core = "0.4.0"
critical-section = "1"
embedded-hal = "1"

embassy-time = { version = "0.5" }
embassy-executor = { version = "0.9" }
embassy-usb = { version = "0.5", default-features = false, features = ["usbd-hid"] }
usbd-hid = "0.8.0"
embassy-futures = "0.1"
embassy-sync = "0.7"

tinygif = "0.0.4"
embedded-graphics = "0.8.1"

[features]
# usb-pin-exchange is enabled by default for now, until we have a new revision of the hardware
# In the future we may wish to auto detect this based on either fw metadata
default = ["usb-pin-exchange", "log"]
usb-pin-exchange = []
log = []
defmt = []

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false